fix horizontal scroll

--- a/src/components/CategoryView/CategoryView.scss
+++ b/src/components/CategoryView/CategoryView.scss
@@ -1,4 +1,4 @@
-.categoty-view {
+.category-view {
   padding: 40px 0;
   max-width: 1290px;
   margin: 0 auto;
