--- a/src/components/StarRating/StarRating.module.css
+++ b/src/components/StarRating/StarRating.module.css
@@ -1,4 +1,5 @@
 .rating {
+  position: relative;
   width: fit-content;
   margin: 0 -2px;
 }
